[Priyanka]Added:Mobile view for safari browser,Added SM

--- a/src/app/views/shared/header/header.component.html
+++ b/src/app/views/shared/header/header.component.html
@@ -263,5 +263,5 @@
   </div>
 </div>
 
-<!-- <app-support-modal #supportModal>
-</app-support-modal> -->
+<app-support-modal #supportModal>
+</app-support-modal>
