[Priyanka]Added:cursor on support links,Adjust header in tablet view

--- a/src/app/views/shared/footer/footer.component.html
+++ b/src/app/views/shared/footer/footer.component.html
@@ -9,17 +9,17 @@
 			<img class="headphone-icon" src="assets/img/chat_support.svg" alt="support" />
 		</button>
 		<ul class="dropdown-menu sort-by" aria-labelledby="sort-drop">
-			<li><a class="dropdown-item">
+			<li><a class="dropdown-item" style="cursor: pointer;">
 					<!-- <img class="icon" src="assets/img/email1.png" /> -->
 					<img class="icon" src="assets/img/email2.png" alt="email" />
 					<!-- <b>Support</b> -->
 					<a data-toggle="modal" data-target="#supportModal" (click)="showSupportModal()"><b>Support</b></a>
 
 				</a></li>
-			<li><a class="dropdown-item" href="javascript:void(0)">
+			<li><a class="dropdown-item" href="javascript:void(0)" style="cursor: pointer;">
 					<img class="icon" src="assets/img/whatsapp_icon.svg" alt=whatsapp />
 					<b>WhatsApp</b> </a></li>
-			<li><a class="dropdown-item" href="tel:080-45574050">
+			<li><a class="dropdown-item" href="tel:080-45574050" style="cursor: pointer;">
 					<img class="icon" src="assets/img/telephone.png" alt="telephone" />
 					<b>080-45574050</b> </a></li>
 			<!-- <a href="tel:8665562570">Call us at 866-556-2570</a> -->
