--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1233,8 +1233,10 @@
 		position: absolute;
 		align-items: center;
 		justify-content: center;
-		height: 3rem !important;
-		width: 3rem !important;
+		/* height: 3rem !important;
+		width: 3rem !important; */
+		width: 60px !important;
+height:10px !important;
 		top: 8rem;
 		box-shadow: none;
 		opacity: 0.5;
@@ -1396,6 +1398,19 @@
 	width: 100%;
 }
 
+/* owl-carousel .owl-item img{
+	display:none !important;
+	width:0% !important;
+} */
+
+.owl-carousel .owl-item img {
+	display:none !important;
+	width:0% !important;
+}
+.elementor-button-icon{
+	display:block !important;
+	width:12% !important;
+}
 
 
 @media only screen and (max-width: 767px) {
@@ -1608,25 +1623,25 @@
 @media only screen and (min-width: 768px) {
 	::ng-deep .index-product .owl-prev {
 		left: 0px;
-		background: #eef8fa;
+		background: #85cfdc;
 		z-index: 999;
 		display: flex !important;
 		position: absolute;
 		align-items: center;
 		justify-content: center;
-		height: 40px !important;
-		width: 40px !important;
+		height: 10px !important;
+		width: 60px !important;
 		top: 20px;
 		box-shadow: 0px 0px 5px #0000001c;
 		opacity: .9;
 	}
 
 	::ng-deep .owl-theme .owl-nav [class*=owl-] {
-		background: #eef8fa;
+		background: #85cfdc;
 	}
 
 	::ng-deep .owl-theme .owl-nav:hover [class*=owl-] {
-		background: #eef8fa;
+		background: #85cfdc;
 	}
 
 	::ng-deep .index-product .owl-next {
